Fix drawer too large

--- a/hub-nextjs/src/styles/overrides.css
+++ b/hub-nextjs/src/styles/overrides.css
@@ -108,3 +108,9 @@ body {
   border-radius: 50%;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
+
+.ant-drawer-content-wrapper {
+  max-width: 450px !important;
+  margin-left: auto;
+  margin-right: auto;
+}
